# gen_design_sheet_metal

./: .gitignore  README.md  config.yaml  pyproject.toml  user_input.py
config/: config.yaml  user_input.py
src/gen_design_sheet_metal/: __main__.py  design_rules.py
src/gen_design_sheet_metal.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/gen_design_sheet_metal/design_exploration/: connect_edges.py  plot_state.py  state.py
src/gen_design_sheet_metal/geometry/: geometry.py  part_generation.py  utilities.py
