[project]
name = "gen_design_sheet_metal"
version = "0.3"
authors = [
    { name = "Maxim Möllhoff", email = "maxim@moellhoff.eu" }
]
readme = "README.md"

dependencies = [
    "numpy",
    "pyvista",
    "PyYAML",
    "dataclasses"
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]